--- a/public/test.html
+++ b/public/test.html
@@ -77,7 +77,7 @@
 -->
 
 
-    <div ng-controller=controle000>
+    <div ng-controller="controle000">
 
         <input type="text" ng-model=test>
         <button ng-click="alpha()">alpha</button>
@@ -87,12 +87,12 @@
 
 
   
-<!--
-    <div ng-controller=controle001>
+ 
+    <div ng-controller="controle001">
        {{test1}}
     </div>
 
--->
+
 </body>
 
 </html>
