--- a/public/test.html
+++ b/public/test.html
@@ -92,6 +92,14 @@
        {{test1}}
     </div>
 
+    <div ng-controller="controle002">
+    
+        <input type= "text" ng-model=id>
+        <button ng-click="positioncompte()">position</button>
+       {{obj.id}}
+
+    </div>
+
 
 </body>
 
