--- a/public/test.html
+++ b/public/test.html
@@ -95,8 +95,8 @@
     <div ng-controller="controle002">
     
         <input type= "text" ng-model=id>
-        <button ng-click="positioncompte()">position</button>
-       {{id}}
+        <button ng-click="">position</button>
+       {{obj.id}}
 
     </div>
 
