--- a/public/test.html
+++ b/public/test.html
@@ -177,7 +177,8 @@
                                     <button type="button" class="btn btn-primary" tabindex="5" ng-click="add_ret()" data-toggle="tooltip" data-placement="top" title="BOUTON  POUR LA MIS A JOUR DU COMPTE">
                                         ajouter ou retirer</button>
                         
-                        
+                                        <button type="button" class="btn btn-primary" tabindex="6" ng-click="Liste()" data-toggle="tooltip" data-placement="top" title="BOUTON  POUR LA MIS A JOUR DU COMPTE">
+                                            liste</button>
 
                         </div>
 
@@ -189,6 +190,7 @@
                     <div>
                             <div class="alert alert-secondary" role="alert">
                                     {{e}}   <!--retour serveur-->
+                                   test: {{liste}}
                                     {{e1}}
                                     {{ResponseDetails}}
                                   </div>
